refactor: 💡 migrate old java code to Jvm 21 ver code